--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>cloudbees-file-leak-detector</artifactId>
   <name>CloudBees File Leak Detector Plugin</name>
   <description>Monitors and detects file handle leaks in Jenkins</description>
-  <version>1.1</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <dependencies>
@@ -23,29 +23,15 @@
   </dependencies>
 
   <scm>
-    <connection>scm:git:ssh://git@git.cloudbees.com/cloudbees/${project.artifactId}-plugin.git</connection>
-    <developerConnection>scm:git:ssh://git@git.cloudbees.com/cloudbees/${project.artifactId}-plugin.git</developerConnection>
+    <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
+    <url>http://github.com/jenkinsci/${project.artifactId}-plugin</url>
   </scm>
 
   <repositories>
-    <repository>
-      <id>repository-cloudbees.forge.cloudbees.com</id>
-      <url>https://repository-cloudbees.forge.cloudbees.com/private-release/</url>
-    </repository>
     <repository>
       <id>repo.jenkins-ci.org</id>
       <url>http://repo.jenkins-ci.org/public/</url>
     </repository>
   </repositories>
-
-  <distributionManagement>
-    <repository>
-      <id>repository-cloudbees.forge.cloudbees.com</id>
-      <url>dav:https://repository-cloudbees.forge.cloudbees.com/private-release/</url>
-    </repository>
-    <snapshotRepository>
-      <id>repository-cloudbees.forge.cloudbees.com</id>
-      <url>dav:https://repository-cloudbees.forge.cloudbees.com/private-snapshot/</url>
-    </snapshotRepository>
-  </distributionManagement>
 </project>
