--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,18 @@
     <dependency>
       <groupId>org.kohsuke</groupId>
       <artifactId>file-leak-detector</artifactId>
-      <version>1.4</version>
+      <version>1.6-SNAPSHOT</version>
       <classifier>jar-with-dependencies</classifier>
+      <exclusions>
+        <exclusion>
+          <groupId>args4j</groupId>
+          <artifactId>args4j</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.kohsuke</groupId>
+          <artifactId>asm3</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
