--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>org.kohsuke</groupId>
       <artifactId>file-leak-detector</artifactId>
-      <version>1.6-SNAPSHOT</version>
+      <version>1.6</version>
       <classifier>jar-with-dependencies</classifier>
       <exclusions>
         <exclusion>
