--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <description>Monitors and detects file handle leaks in Jenkins</description>
   <version>1.4-SNAPSHOT</version>
   <packaging>hpi</packaging>
+  <url>https://wiki.jenkins-ci.org/display/JENKINS/File+Leak+Detector+Plugin</url>
 
   <dependencies>
     <dependency>
