--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>3.7</version>
+    <version>3.51</version>
   </parent>
 
   <groupId>com.cloudbees.jenkins.plugins</groupId>
@@ -16,8 +16,11 @@
   <url>https://wiki.jenkins.io/display/JENKINS/File+Leak+Detector+Plugin</url>
 
   <properties>
-        <jenkins.version>2.7.3</jenkins.version>
-        <java.level>8</java.level>
+    <jenkins.version>2.7.3</jenkins.version>
+    <java.level>8</java.level>
+    <spotbugs.effort>Max</spotbugs.effort>
+    <spotbugs.failOnError>true</spotbugs.failOnError>
+    <spotbugs.threshold>Low</spotbugs.threshold>
   </properties>
 
   <dependencies>
@@ -59,5 +62,24 @@
             <url>http://repo.jenkins-ci.org/public/</url>
         </pluginRepository>
     </pluginRepositories>
-</project>  
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <configuration>
+          <plugins>
+            <plugin>
+              <groupId>com.h3xstream.findsecbugs</groupId>
+              <artifactId>findsecbugs-plugin</artifactId>
+              <version>1.10.1</version>
+            </plugin>
+          </plugins>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+</project>
 
