--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <artifactId>file-leak-detector</artifactId>
   <name>CloudBees File Leak Detector Plugin</name>
   <description>Monitors and detects file handle leaks in Jenkins</description>
-  <version>${revision}${changelist}</version>
+  <version>1.7</version>
   <packaging>hpi</packaging>
   <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
 
@@ -65,7 +65,7 @@
     <connection>scm:git:git://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
     <url>https://github.com/${gitHubRepo}</url>
-    <tag>${scmTag}</tag>
+    <tag>file-leak-detector-1.7</tag>
   </scm>
 
   <repositories>
