--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <spotless.check.skip>false</spotless.check.skip>
     <hpi.bundledArtifacts>file-leak-detector</hpi.bundledArtifacts>
     <hpi.strictBundledArtifacts>true</hpi.strictBundledArtifacts>
+    <ban-junit4-imports.skip>false</ban-junit4-imports.skip>
   </properties>
 
   <dependencies>
